--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "camelcase-keys": "^6.2.2",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^4.0.0",
+    "fs": "^0.0.1-security",
     "js-cookie": "^2.2.1",
     "ley": "^0.6.0",
     "next": "9.5.3",
